fix alignment

--- a/packages/assets/scss/00-base/mixins/_ma-button-base.scss
+++ b/packages/assets/scss/00-base/mixins/_ma-button-base.scss
@@ -4,6 +4,7 @@
   border: 3px solid;
   box-shadow: 0 0.25rem 0.5rem rgba(1, 1, 1, 0.25);
   display: inline-flex;
+  align-items: center;
   letter-spacing: $letter-spacing-large;
   padding: 0.4em 1em;
   text-decoration: none;
